Fix obscure site logo layout bug

--- a/css/include/initial.css
+++ b/css/include/initial.css
@@ -166,6 +166,9 @@ main {
     display: flex;
     margin: 1px 0;
 }
+#sidebar a#logo svg {
+	height: 100%;
+}
 @media all and (max-width: 649px) {
     #sidebar a#logo {
         padding: 0.5em 0.375em;
